Some quick fixes on mobile headings

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -85,10 +85,19 @@
 
 // Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
-  }
+  main {
+    padding: 1.4rem;
 
+    #home h1 {
+      margin-top: 7vh;
+      font-size: 2rem;
+    }
+
+    .lg-heading {
+      margin-top: 2rem;
+      font-size: 3rem;
+    }
+  }
   .projects {
     grid-template-columns: 1fr;
   }
